force-app/main/default/objects/custom_create358__c/custom_create358__c.object-meta.xml
<CustomObject>
    <label>Custom created object358</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects358</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>