force-app/main/default/objects/custom_create358__c/fields/custom_create_358field596__c.field-meta.xml
<CustomField>
    <fullName>custom_create_358field596__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 358field596</label>
    <type>Checkbox</type>
</CustomField>